src/test/resources/typeSystemTestModels/valid/classes/GenericClassNotSubClassOfThrowable.java
package typeSystemTestModels.valid.classes;

import java.lang.String;

public class GenericClassNotSubClassOfThrowable<T> extends String {

}