src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/Second.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

import java.lang.Integer;

public class Second<T> extends First<Integer> {

}
